# c

./: .gitignore  README.md  vagrantfile
asm/: README.md
asm/helloworld/: README.md  hello_elf64.asm
asm/i386/helloworld/: README.md
autotools/: README.md
autotools/helloworld/: Makefile  Makefile.in  config.status  configure
autotools/helloworld/autom4te.cache/: output.1  requests  traces.1
autotools/helloworld/src/: Makefile  Makefile.in  hello
autotools/helloworld/src/.deps/: main.Po
bison-flex/: README.md
bison-flex/desk-calculator/: README.md
bison-flex/desk-calculator/v1/: calculator.l
bison-flex/desk-calculator/v2/: calculator.l  calculator.y
bison-flex/desk-calculator/v3/: README.md  calc  calc.l  calc.output  calc.tab.c  calc.tab.h  calc.y  lex.yy.c
bison-flex/translator-uk-us/: README.md  translator.l
bison-flex/word-count/: README.md  wc.l
cobol/: README.md
cobol/helloworld/: README.md  hello.cob
cunit/: CMakeLists.txt  README.md
cunit/src/: main.c
cutest/: CMakeLists.txt  README.md
cutest/src/: main.c
debuggers/: README.md  gdbtest.c
docker-helloworld/: Dockerfile
getopt/: getopt-long-options.c  getopt.c
gtk/: README.md  gtk-test.c  hello-world.c  simple-window.c
hello-world/: 2  Makefile  README.md  Taskfile.yml  hello-world-function.c  test-string.c
hello-world-cmake/: CMakeLists.txt  Dockerfile  README.md  hello-world.c
http-server/: CMakeLists.txt  Dockerfile  README.md  clean-build.sh  conanfile.txt  http-server.c  test.py
http-server/etc/: conf.ini
http-server/include/: cli.h  config.h  file.h  http.h  main.h  string-utils.h  tcp-server.h  unit-tests.h
http-server/old/cunit/: file.c  http.c  string-utils.c  unit-tests.h
http-server/src/: cli.c  http.c  main.c  string-utils.c  tcp-server.c
http-server/src/common/: CMakeLists.txt  file.c  http.c  string-utils.c
http-server/src/main/: CMakeLists.txt  cli.c  main.c  tcp-server.c
http-server/src/test/: CMakeLists.txt  http.c  main.c
http-server/test/: Makefile  assert-test.c  concat-string.c  extract-headers.c  openfile.c  strtok.c
http-server/www/: index.html
ini/: CMakeLists.txt  README.md  ini-test.c
io/: README.md  getopts-test.c  input-output.c
lib/: test-lib.c  test-lib.h
libcurl/: CMakeLists.txt  README.md  conanfile.txt  getinmemory.c  parseurl.c  simple.c
libxml/: CMakeLists.txt  README.md  conanfile.txt  simple-example.c
linked-list/: README.md  simple-linked-list.c
linux-module/: README.md
linux-module/lkm_example/: README.md  lkm_example.c
linux-module/lkm_simple_example/: Makefile  README.md  lkm_simple_example.c
make/: Makefile  README.md  function.c  hello.c  main.d
mysql-client/: CMakeLists.txt  README.md  conanfile.txt  createdb.c  main.c  my.cnf  vagrantfile  version.c
opencl/: README.md  devices.c  hello.c
opencl/hello-world1/: hello.c
opencl/vector-add/: README.md  naive.c
rpc/: hello.x
sanitizer/: CMakeLists.txt  README.md  build.sh  use-after-free.c
sdl/: README.md
sdl/helloworld/: CMakeLists.txt  README.md  main.c
sdl/shifumi/: CMakeLists.txt
sdl/shifumi/include/: core.h  game.h  message.h  piece.h  player.h
sdl/shifumi/src/: core.c  game.c  main.c  message.c  piece.c
sdl/simple/: CMakeLists.txt  README.md  main.c
sdl/v1/simple/: README.md  main.c
socket/: README.md  simple-socket-connection.c  simple-socket.c  socket-connection.c  threaded-socket-connection.c
sort/: qsort.c  sort.c
ssl-server/: CMakeLists.txt  README.md  build.sh  cert.pem  clean-build.sh  configure.sh  key.pem  main.c
ssl-server/include/: ssl-server.h  tcp-server.h
ssl-server/src/: main.c  ssl-server.c  tcp-server.c
tcp-server/: CMakeLists.txt  Dockerfile  Makefile  README.md  clean-build.sh  tcp-server.c
tcp-server/include/: cli.h  main.h  tcp-server.h
tcp-server/src/: cli.c  main.c  tcp-server.c
tcp-server/test/: strcat-test.c
threads/: threads-example.c
vector/: README.md  main.c  vec.c
yaml/: README.md
